fix chezmoi template

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,5 +1,5 @@
 sourceDir = "{{ env "HOME" }}/code-monkey/dotfiles"
-pager = "bat --language=diff --style=plain"
+pager = "bat --language=diff --plain --plain"
 [merge]
     command = "nvim"
     args = [
